<resources>
    <string name="app_name">ShopEasy</string>
    <string name="login">Login</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login_to_store">Login to Store</string>
    <string name="textview">TextView</string>
    <string name="product_list">Product List</string>
    <string name="product">product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_quan" />
    <string name="product_quantities">Product Quan</string>
    <string name="remove">Remove</string>
    <string name="x">X</string>
    <string name="product_listitems">Product List</string>
    <string name="product_barcode">Product Barcode</string>
    <string name="userid">userID</string>
    <string name="pay_bill">Pay Bill</string>
    <string name="scan_item">Scan Item</string>
    <string name="total">total</string>
    <string name="moreDetails"><![CDATA[>]]></string>
    <string name="info">info</string>
    <string name="i">(i)</string>
    <string name="information">i</string>
    <string name="product_details">Product Details</string>
    <string name="product_names">Product Name</string>
    <string name="product_prices">Product Price</string>
    <string name="product_pricess">Product Price</string>
    <string name="product_barcodess">Product Barcode</string>
    <string name="product_detailss">Product Details</string>
    <string name="user">User</string>
    <string name="username">UserName</string>
    <string name="useremail">useremail</string>
    <string name="usernumber">usernumber</string>
    <string name="userrfid">userrfid</string>
    <string name="user_details">User Details</string>
</resources>