<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ProductDetails">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/product_details"
            android:textColor="@color/design_default_color_primary"
            android:gravity="center"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/nameProduct"
        android:layout_width="match_parent"
        android:text="@string/product_names"
        android:padding="10dp"
        android:textColor="@color/design_default_color_primary"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/priceProduct"
        android:layout_width="match_parent"
        android:text="@string/product_pricess"
        android:padding="10dp"
        android:textColor="@color/design_default_color_primary"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/barcodeProduct"
        android:layout_width="match_parent"
        android:text="@string/product_barcodess"
        android:padding="10dp"
        android:textColor="@color/design_default_color_primary"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/detailsProduct"
        android:layout_width="match_parent"
        android:text="@string/product_detailss"
        android:padding="10dp"
        android:textColor="@color/design_default_color_primary"
        android:layout_height="wrap_content" />
</LinearLayout>