<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/product_name"
            android:textColor="@color/design_default_color_primary" />

        <TextView
            android:id="@+id/pQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="70dp"
            android:text="@string/product_quantities"
            android:textColor="@color/design_default_color_primary" />


        <TextView
            android:id="@+id/pPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="150dp"
            android:text="@string/product_price"
            android:textColor="@color/design_default_color_primary" />

        <Button
            android:id="@+id/delProduct"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="200dp"
            android:backgroundTint="@color/white"
            android:text="@string/x"
            android:textColor="@color/design_default_color_primary"
            android:textSize="11sp" />

        <Button
            android:id="@+id/moreDetails"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="230dp"
            android:backgroundTint="@color/white"
            android:text="@string/information"
            android:textColor="@color/design_default_color_primary"
            android:textSize="11sp" />


    </RelativeLayout>
</LinearLayout>